# vfq_interprete

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/co/venko/vfq_interprete/: VfqInterpretePlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/co/venko/vfq_interprete_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: vfq_interprete.podspec
ios/Classes/: SwiftVfqInterpretePlugin.swift  VfqInterpretePlugin.h  VfqInterpretePlugin.m  base64.cpp  base64.h  convert.cpp  convert.h  document.cpp  document.h  lll.cpp  lll.h  persona.cpp  persona.h  utilities.cpp  utilities.h  verifiquese.cpp  verifiquese.h
lib/: interprete_vfq.dart  vfq_interprete.dart
test/: vfq_interprete_test.dart
